@@ -20,7 +20,11 @@ do_search = function() {
 }
 
 other_search_rm = function() {
-  Krang.Form.submit('search_form', { rm: 'list_retired', other_search_place: 'Search in Live' });
+  Krang.Form.submit('search_form', {
+    rm: 'list_retired',
+    other_search_place: 'Search in Live',
+    krang_pager_curr_page_num: '1'
+    });
 }
 
 <tmpl_if do_advanced_search>
